--- a/.github/workflows/build_liyafe1977.yml
+++ b/.github/workflows/build_liyafe1977.yml
@@ -4,11 +4,11 @@ on:
   workflow_dispatch:
     inputs:
       roota:
-        description: '是否需要ksu（不需要留空即可）'
+        description: 'Is KSU required? (Leave blank if not required) '
         required: false
         type: string
       phonea:
-        description: '输入机型代号（如小米10 umi）'
+        description: 'Enter the model code (e.g. Xiaomi 10 umi) '
         required: false
         type: string
 jobs:
